adicionado layout default, helpers e flash messages

--- a/app/views/lists/list.erb
+++ b/app/views/lists/list.erb
@@ -1,3 +1,9 @@
+<% lists.each do |list| %>
+  <p>
+    <%= list.name %>
+  </p>
+<% end %>
+
 <p>
-  <%= list.name %>
+  <a href="/lists/new">Add new list </a>
 </p>
