adicionado jquery + ajax para modificar status das Tasks criadas

--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -8,5 +8,8 @@
   <body>
     <%= flash_messages %>
     <%= yield %>
+
+    <script type="text/javascript" src="/jquery.min.js"></script>
+    <script type="text/javascript" src="/app.js"></script>
   </body>
 </html>
