configurações para deploy no heroku

--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>Demo Sinatra</title>
+    <title>Demo Sinatra - Todo List</title>
   </head>
 
   <body>
