--- a/app/views/lists/no_items.erb
+++ b/app/views/lists/no_items.erb
@@ -1,6 +1,6 @@
 <p>
-  You have no lists.
-  Just
-  <a href="/lists/new">create a new list</a>
-  right now.
+  Você não possui listas.
+  Basta
+  <a href="/lists/new">criar uma nova lista</a>
+  agora mesmo.
 </p>
